--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
     "vite": "^4.0.0",
     "vite-plugin-image-optimizer": "^1.0.7",
     "vite-plugin-minify": "^1.5.2"
+  },
+  "dependencies": {
+    "@popperjs/core": "^2.11.7",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5"
   }
 }
